package bigtalkdesignMod.v12.v12_4;

public class SubSystemFour {

    public void methodFour() {
        System.out.println("子系统方法四");
    }

}
