package bigtalkdesignMod.v12.v12_4;

public class SubSystemOne {

    public void methodOne() {
        System.out.println("子系统方法一");
    }

}
