package bigtalkdesignMod.v12.v12_4;

public class SubSystemThree {

    public void methodThree() {
        System.out.println("子系统方法三");
    }

}
