package bigtalkdesignMod.v12.v12_4;

public class SubSystemTwo {

    public void methodTwo() {
        System.out.println("子系统方法二");
    }

}
